add view cart, upgrade the pop up, write the code for updating quantity but did not integrate it

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -196,8 +196,13 @@
                 </th:block>
                 <th:block th:if="${session.sessionToken != null and session.sessionRole == 'CUSTOMER'}">
                     <li class="sidebar-item">
+                        <a id="nav-my-cart" class="sidebar-link" href="/shoppingCart/showCart">
+                            <i class="fas fa-shopping-cart"></i> <span class="align-middle">Количка</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
                         <a id="nav-my-orders" class="sidebar-link" href="/order/my-orders">
-                            <i class="fas fa-shopping-cart"></i> <span class="align-middle">Моите Поръчки</span>
+                            <i class="fas fa-shopping-basket align-middle"></i></i></i> <span class="align-middle">Моите Поръчки</span>
                         </a>
                     </li>
                 </th:block>
