fix the selling price when customer make order

--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -119,7 +119,7 @@
                                         </td>
                                         <td>
                                             <input type="number" step="0.01" class="price-input"
-                                                   th:value="${productDTOS[__${orderProductDTO.packageId - 1}__].price}"
+                                                   th:value="${orderProductDTO.sellingPrice}"
                                                    id="priceInput" name="priceInput">
                                         </td>
                                         <td>
