--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -15,4 +15,4 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link href="/css/app.css" rel="stylesheet">
-<link href="/js/app.css" rel="stylesheet">
+<link href="/css/app.js" rel="stylesheet">
