--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -8,6 +8,16 @@
     <link href="/css/show.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
+    });
+</script>
 <body>
 <div class="wrapper">
     <th:block th:insert="~{fragments/header}"></th:block>
