--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -22,6 +22,11 @@
 <div class="wrapper">
     <th:block th:insert="~{fragments/header}"></th:block>
     <div class="main">
+        <nav class="navbar navbar-expand navbar-light navbar-bg">
+            <a class="sidebar-toggle js-sidebar-toggle">
+                <i class="hamburger align-self-center"></i>
+            </a>
+        </nav>
         <main class="content">
             <div class="row">
                 <div class="col-lg-11 mx-auto">
