--- a/src/main/resources/templates/Product/available-products.html
+++ b/src/main/resources/templates/Product/available-products.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <!-- LINKS -->
     <th:block th:insert="~{fragments/links}"></th:block>
     <title>Продукти Лукерия</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .message-box {
+      background-color: #008000; /* Green background */
+      color: #fff; /* Light text */
+      text-align: center;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .error-box {
+      background-color: ##ff0000; /* Light grey background */
+      color: #fff; /* Red text */
+      text-align: center;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  .price-display {
+    font-size: 1.5em; /* Увеличава шрифта на цената */
+    font-weight: bold; /* Прави текста удебелен */
+    color: #333; /* Тъмен цвят за по-добра видимост */
+}
+        .btn-primary {
+    border-radius: 20px; /* Закръгляване на ъглите за по-мек изглед */
+    padding: 10px 20px; /* Увеличаваме отстоянието около текста */
+}
+
+.btn-primary:hover {
+    background-color: #0056b3; /* Тъмен оттенък на синьото при задържане */
+    border-color: #004085; /* Тъмен бордер при задържане */
+}
+    </style>
+    <script th:inline="javascript">
+        setTimeout(function() {
+            var messageDiv = document.getElementById("messageDiv");
+            if (messageDiv) {
+                messageDiv.style.display = 'none';
+            }
+        }, 3000);
+
+    </script>
+    <script th:inline="javascript">
+        setTimeout(function() {
+            var errorDiv = document.getElementById("errorDiv");
+            if (errorDiv) {
+                errorDiv.style.display = 'none';
+            }
+        }, 3000);
+
+    </script>
 </head>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -21,6 +79,7 @@
 <body>
 <div class="wrapper">
     <th:block th:insert="~{fragments/header}"></th:block>
+
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
             <a class="sidebar-toggle js-sidebar-toggle">
@@ -31,8 +90,25 @@
             <div class="row">
                 <div class="col-lg-11 mx-auto">
                     <div class="card custom-card-width-lg">
-                        <div class="card-header">
-                            <h5 class="card-title mb-0">Налични продукти</h5>
+                        <div class="card-header d-flex align-items-center position-relative">
+                            <!-- Left-aligned text -->
+                            <div class="header-left">
+                                <h5 class="card-title mb-0">Продукти в наличност</h5>
+                            </div>
+
+                            <div class="message-box text-center position-absolute"
+                                 style="left: 50%; transform: translateX(-50%);"
+                                 th:if="${param.error != null and param.error != ''}"
+                                 id="errorDiv">
+                                <p class="mb-0" th:text="${param.error}"></p>
+                            </div>
+                            <!-- Centered message box -->
+                            <div class="message-box text-center position-absolute"
+                                 style="left: 50%; transform: translateX(-50%);"
+                                 th:if="${param.message != null and param.message != ''}"
+                                 id="messageDiv">
+                                <p class="mb-0" th:text="${param.message}"></p>
+                            </div>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -69,11 +145,47 @@
                                         <td>
                                             <!-- Направи поръчка button visible only for CUSTOMER -->
                                             <div th:if="${session.sessionRole == 'CUSTOMER'}">
-                                                <form id="orderForm" action="/order/place" method="get">
-                                                    <input type="hidden" name="product.id" th:value="${productPrice.product.id}"/>
-                                                    <input type="hidden" name="quantity" value="1"/>
-                                                    <button type="submit" class="btn btn-primary">Направи поръчка</button>
-                                                </form>
+                                                <button type="button" class="btn btn-lg btn-primary d-flex align-items-center"
+                                                        data-bs-toggle="modal" th:attr="data-bs-target='#exampleModal'+${productPrice.product.id}">
+                                                    <i class="fas fa-shopping-cart me-2"></i> Купи
+                                                </button>
+                                                <div class="modal fade" th:id="'exampleModal'+${productPrice.product.id}" tabindex="-1" aria-labelledby="buyModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog modal-dialog-centered">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" th:text="'Купи ' + ${productPackageMap.get(productPrice.product.packageId)}"></h5>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="d-flex flex-column align-items-center">
+                                                                    <!-- Изображение на продукта -->
+                                                                    <img th:if="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
+                                                                         th:src="@{${backendBaseUrl} + '/' + ${productPackageMapImages.get(productPrice.product.packageId)}}"
+                                                                         class="img-fluid mb-3" style="max-height: 250px; max-width: 250px;">
+                                                                    <img th:unless="${productPackageMapImages.containsKey(productPrice.product.packageId)}"
+                                                                         src="/img/photos/noImage.png" class="img-fluid mb-3" style="max-height: 250px; max-width: 250px;">
+
+                                                                    <!-- Информация за цената и наличността -->
+                                                                    <div class="text-center mb-3">
+                                                                        <p class="price-display" th:text="'Цена: ' + ${productPrice.price} + ' Лв'"></p>
+                                                                    </div>
+
+                                                                    <!-- Форма за добавяне в количката -->
+                                                                    <form action="/shoppingCart/addToCart" method="post" class="w-100">
+                                                                        <input type="hidden" name="productId" th:value="${productPrice.product.id}" />
+                                                                        <div class="mb-3">
+                                                                            <label for="quantity" class="form-label">Количество</label>
+                                                                            <input type="number" name="quantity" id="quantity" class="form-control" min="1" th:max="${productPrice.product.availableQuantity}" required/>
+                                                                        </div>
+                                                                        <button type="submit" class="btn btn-primary w-100">
+                                                                            <i class="fas fa-shopping-cart"></i> Добави в количката
+                                                                        </button>
+                                                                    </form>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </td>
                                     </tr>
@@ -87,5 +199,8 @@
         </main>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
 </body>
 </html>
