--- a/src/main/resources/templates/Cart/show.html
+++ b/src/main/resources/templates/Cart/show.html
@@ -4,7 +4,7 @@
     <!-- LINKS -->
     <th:block th:insert="~{fragments/links}"></th:block>
 
-    <title>Персонализирани цени</title>
+    <title>Количка</title>
     <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
     <link href="/css/show.css" rel="stylesheet">
     <style>
