fix the flexible navbar

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -112,8 +112,8 @@
                         th:if="${session.sessionToken != null and (session.sessionRole == 'PRODUCTION_MANAGER' or session.sessionRole == 'TRANSPORT_MANAGER')}">
                     <li class="sidebar-item">
                         <a id="nav-show15" class="sidebar-link" href="/product/show">
-                            <i class="fas fa-boxes"></i><span>
-                                class="align-middle">Продукти Лукерия</span>
+                            <i class="fas fa-boxes"></i>
+                            <span>Продукти Лукерия</span>
                         </a>
                     </li>
                 </th:block>
