fix error.html page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -32,6 +32,10 @@
 
         <p class="fs-5"> <span class="text-danger">Върнете се към предходната страница и проверете вярността на въведените данни!
         </span></p>
+
+        <div class="mt-4">
+            <a href="/login" class="btn btn-primary btn-lg">Отидете на началната страница</a>
+        </div>
     </div>
 </div>
 </body>
